# camera-transfer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  settings.env
src/camera_transfer/: app.py  camera_file.py  camera_file_getter.py  camera_settings.py  camera_transfer.py  camera_transfer.py.old  camera_video.py  console.py  dotenv_config.py  hash_store.py  os_file_getter.py  os_output_file_writer.py
src/cameratransfer/: app.py  camera_file.py  camera_file_getter.py  camera_image.py  camera_transfer.py  camera_video.py  dotenv_config.py  file_data.py  hash_store.py  os_file_getter.py  os_output_file_writer.py
tests/: conftest.py  test.env  test_camera_transfer.py
tests/unit/: test_camera_image.py  test_camera_video.py
