[tool.poetry]
name = "camera-transfer"
version = "0.1.0"
description = "processes and organises photos from external devices like cameras and phones"
authors = ["Chris Denney <chris.j.denney@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
camera-transfer = "camera_transfer.console:main"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
click = "^8.1.7"
pydantic-settings = "^2.0.3"
exif = "^1.6.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.0.2"
mypy = "^1.5.1"
pytest = "^7.4.2"
coverage = {extras = ["toml"], version = "^7.4.0"}
pytest-cov = "^4.1.0"
rich = "^13.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

# follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s.%(msecs)03d [%(filename)30s:%(lineno)04d] %(levelname)-8s %(funcName)-30s %(message)s"
log_cli_date_format = "%M:%S"

log_level = "DEBUG"
log_format = "%(asctime)s.%(msecs)03d %(module)21s [%(filename)30s:%(lineno)04d] %(levelname)-8s %(funcName)-30s %(message)s"
log_date_format = "%M:%S"

log_file = "pytest.log"
log_file_level = "DEBUG"
# log_file_format = "%(asctime)s.%(msecs)03d %(module)s [%(filename)25s:%(lineno)04d] %(levelname)-8s %(funcName)-30s %(message)s"
# log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file_format = "%(asctime)s.%(msecs)03d [%(filename)30s:%(lineno)04d] %(levelname)-8s %(funcName)-30s %(message)s"
log_file_date_format = "%H:%M:%S"


[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["cameratransfer"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "\\.\\.\\."
]