[project]
name = "camera-transfer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Denney", email = "chris.j.denney@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "exif>=1.6.0",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
]

[project.scripts]
camera-transfer = "camera_transfer.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.4",
    "mypy>=1.13.0",
    "notebook>=7.2.2",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
]
